--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.1.0",
+    "aos": "^2.3.4",
+    "pdfjs-dist": "^2.11.338",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-pdf": "^7.7.0",
+    "react-pdf": "^5.7.2",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "typewriter-effect": "^2.21.0",
